Removed sorting on configVersion